<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/gray"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="@dimen/cardview_default_elevation"
            app:contentPadding="5dp"
            android:layout_margin="8dp"
            tools:ignore="PrivateResource">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="15dp"/>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black"
                    android:hint="@string/label_username"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/username"
                        android:maxLines="1"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"

                        android:drawableLeft="@drawable/ic_user"
                        android:drawableStart="@drawable/ic_user" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black"
                    android:hint="@string/label_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/password"
                        android:maxLines="1"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:drawableLeft="@drawable/ic_lock"
                        android:drawableStart="@drawable/ic_lock"/>
                </com.google.android.material.textfield.TextInputLayout>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="true"
                    style="@style/Widget.App.CheckBox"
                    android:layout_gravity="end"
                    android:text="@string/label_rember_me"/>
                <android.widget.Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_button_login"
                    android:text="@string/btn_login"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:padding="15dp">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_gravity="center"
           android:gravity="center">

           <!--Floating action button for add alarm-->
           <com.google.android.material.floatingactionbutton.FloatingActionButton
               android:id="@+id/fab_google"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:backgroundTint="#B80D00"
               app:fabSize="normal"
               android:visibility="visible"
               app:tint="@color/white"
               android:layout_gravity="center"
               android:src="@drawable/ic_mail"
               android:contentDescription="@string/app_name"
               tools:targetApi="lollipop"
               android:layout_margin="5dp"/>

           <!--Floating action button for add alarm-->
           <com.google.android.material.floatingactionbutton.FloatingActionButton
               android:id="@+id/fab_facebook"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:backgroundTint="#3F51B5"
               app:fabSize="normal"
               android:visibility="visible"
               app:tint="@color/white"
               android:layout_gravity="center"
               android:src="@drawable/ic_mail"
               android:contentDescription="@string/app_name"
               tools:targetApi="lollipop"
               android:layout_margin="5dp"/>

       </LinearLayout>

        <android.widget.Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_button_signup"
            android:text="@string/btn_signup"
            android:textColor="@color/white"
            android:visibility="visible"/>
    </LinearLayout>

</RelativeLayout>